--- a/BookDeclarations.toml
+++ b/BookDeclarations.toml
@@ -293,7 +293,7 @@ properties = [
 	{ name="HostbuttonGfxUrl", type="str", set=true },
 	{ name="PhoneticName", type="str", set=true },
 	{ name="IconId", type="IconHash", doc="Should be an u32, sometimes the server sends an u64 or an i32 for reasons which has to be cut to 32 bit" },
-	{ name="Ips", type="str", mod="array", doc="A list of listen ips, can be empty" },
+	{ name="Ips", type="SocketAddr", mod="array", doc="A list of listen ips, can be empty" },
 	{ name="AskForPrivilegekey", type="bool" },
 	{ name="HostbannerMode", type="HostBannerMode", set=true },
 	{ name="TempChannelDefaultDeleteDelay", type="Duration", set=true },
