--- a/MessagesToBook.toml
+++ b/MessagesToBook.toml
@@ -99,8 +99,8 @@ to = "Client"
 operation = "add"
 properties = [
 	{ from="TargetChannelId", to="Channel" },
-	{ function="AwayFun", tolist=["AwayMessage"] },
-	{ function="TalkPowerFun", tolist=["TalkPowerRequest"] },
+	{ function="AwayCevFun", tolist=["AwayMessage"] },
+	{ function="TalkPowerCevFun", tolist=["TalkPowerRequest"] },
 	{ function="ReturnNone", tolist=["OptionalData"] },
 	{ function="ReturnNone", tolist=["ConnectionData"] },
 ]
@@ -143,10 +143,24 @@ properties = [
 ]
 
 [[rule]]
+from = "ClientServerGroupRemoved"
+id = ["ClientId"]
+to = "Client"
+operation = "update"
+properties = [
+	{ from="ServerGroupId", to="ServerGroups", operation="remove" },
+	{ function="VoidFun", tolist=["Name"] },
+]
+
+[[rule]]
 from = "ClientUpdated"
 id = ["ClientId"]
 to = "Client"
 operation = "update"
+properties = [
+	{ function="AwayCuFun", tolist=["AwayMessage"] },
+	{ function="TalkPowerCuFun", tolist=["TalkPowerRequest"] },
+]
 
 [[rule]]
 from = "ServerGroupList"
