--- a/Messages.toml
+++ b/Messages.toml
@@ -182,6 +182,8 @@ fields = [
 	{ map="fcldbid", ts="fcldbid", pretty="FromClientDbId", type="ClientDbId" },
 	{ map="file_size", ts="file_size", pretty="FileSize", type="u64" },
 	{ map="flag", ts="flag", pretty="IsRead", type="bool" },
+	{ map="flags@channel_ph", ts="flags", pretty="Flags", type="ChannelPermissionHint" },
+	{ map="flags@client_ph", ts="flags", pretty="Flags", type="ClientPermissionHint" },
 	{ map="flag_read", ts="flag_read", pretty="IsRead", type="bool" },
 	{ map="fname", ts="fname", pretty="FromName", type="str" },
 	{ map="ftkey", ts="ftkey", pretty="FileTransferKey", type="str" },
@@ -421,6 +423,7 @@ msg = [
 	{ name="ChannelListFinished",       notify="channellistfinished",             attributes=[] },
 	{ name="ChannelMoved",              notify="notifychannelmoved",              attributes=["order", "cid", "invokerid", "invokername", "invokeruid?", "reasonid", "cpid"] },
 	{ name="ChannelPasswordChanged",    notify="notifychannelpasswordchanged",    attributes=["cid"] },
+	{ name="ChannelPermissionHints",    notify="notifychannelpermhints",          attributes=["cid", "flags@channel_ph"] },
 	{ name="ChannelSubscribed",         notify="notifychannelsubscribed",         attributes=["cid", "es?"] },
 	{ name="ChannelUnsubscribed",       notify="notifychannelunsubscribed",       attributes=["cid"] },
 	{ name="ClientChannelGroupChanged", notify="notifyclientchannelgroupchanged", attributes=["invokerid", "invokername", "invokeruid?", "cgid", "cgi", "cid", "clid"] },
@@ -432,6 +435,7 @@ msg = [
 	{ name="ClientLeftView",            notify="notifyclientleftview",            attributes=["reasonmsg?", "bantime?", "reasonid?", "ctid", "invokerid?", "invokername?", "invokeruid?", "clid", "cfid"] },
 	{ name="ClientMoved",               notify="notifyclientmoved",               attributes=["clid", "reasonid", "ctid", "invokerid?", "invokername?", "invokeruid?", "reasonmsg?"] },
 	{ name="ClientNeededPermissions",   notify="notifyclientneededpermissions",   attributes=["permid", "permvalue?"] },
+	{ name="ClientPermissionHints",     notify="notifyclientpermhints",           attributes=["clid", "flags@client_ph"] },
 	{ name="ClientServerGroupAdded",    notify="notifyservergroupclientadded",    attributes=["name", "sgid", "invokerid", "invokername", "invokeruid?", "clid", "cluid"] },
 	{ name="ClientServerGroupRemoved",  notify="notifyservergroupclientdeleted",  attributes=["name", "sgid", "invokerid", "invokername", "invokeruid?", "clid", "cluid"] },
 	{ name="ClientUpdated",             notify="notifyclientupdated",             attributes=["clid", "client_nickname?", "client_unread_messages?", "client_version?", "client_platform?", "client_login_name?", "client_created?", "client_lastconnected?", "client_totalconnections?", "client_month_bytes_uploaded?", "client_month_bytes_downloaded?", "client_total_bytes_uploaded?", "client_total_bytes_downloaded?", "client_input_muted?", "client_input_hardware?", "client_output_hardware?", "client_description?", "client_is_priority_speaker?", "client_is_channel_commander?", "client_flag_avatar?", "client_talk_request?", "client_talk_request_msg?", "client_is_talker?", "client_nickname_phonetic?", "client_is_recording?", "client_servergroups?", "client_myteamspeak_id?", "client_badges?", "client_talk_power?", "client_icon_id?"] },
