--- a/Messages.toml
+++ b/Messages.toml
@@ -45,7 +45,7 @@ fields = [
 	{ map="channel_name_phonetic", ts="channel_name_phonetic", pretty="PhoneticName", type="str" },
 	{ map="channel_needed_subscribe_power", ts="channel_needed_subscribe_power", pretty="NeededSubscribePower", type="i32" },
 	{ map="channel_needed_talk_power", ts="channel_needed_talk_power", pretty="NeededTalkPower", type="i32" },
-	{ map="channel_order", ts="channel_order", pretty="Order", type="i32" },
+	{ map="channel_order", ts="channel_order", pretty="Order", type="ChannelId" },
 	{ map="channel_password", ts="channel_password", pretty="Password", type="str" },
 	{ map="channel_topic", ts="channel_topic", pretty="Topic", type="str" },
 	{ map="cid", ts="cid", pretty="ChannelId", type="ChannelId" },
@@ -221,7 +221,7 @@ fields = [
 	{ map="nickname", ts="nickname", pretty="Nickname", type="str" },
 	{ map="oldname", ts="oldname", pretty="OldName", type="str" },
 	{ map="omega", ts="omega", pretty="Omega", type="str" },
-	{ map="order", ts="order", pretty="Order", type="i32" },
+	{ map="order", ts="order", pretty="Order", type="ChannelId" },
 	{ map="overwrite", ts="overwrite", pretty="Overwrite", type="bool" },
 	{ map="p", ts="p", pretty="PermissionId", type="PermissionId" },
 	{ map="path", ts="path", pretty="Path", type="str" },
